--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/LabAssistantRole/ProcessWorkRequestJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/LabAssistantRole/ProcessWorkRequestJPanel.form
@@ -26,7 +26,7 @@
     <Component class="javax.swing.JButton" name="submitJButton">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Product Sans" size="18" style="0"/>
+          <Font name="Product Sans" size="24" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Submit Result"/>
       </Properties>
@@ -35,20 +35,25 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="290" y="270" width="220" height="-1"/>
+          <AbsoluteConstraints x="340" y="270" width="250" height="60"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Product Sans" size="24" style="0"/>
+          <Font name="Product Sans" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Result"/>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/Images/icons8_process_50px_2.png"/>
+        </Property>
       </Properties>
+      <Events>
+        <EventHandler event="componentHidden" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="jLabel1ComponentHidden"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="300" y="200" width="70" height="30"/>
+          <AbsoluteConstraints x="410" y="40" width="70" height="60"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -89,7 +94,20 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="280" y="10" width="380" height="90"/>
+          <AbsoluteConstraints x="280" y="80" width="380" height="90"/>
+        </Constraint>
+      </Constraints>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel3">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Product Sans" size="24" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Result"/>
+      </Properties>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="300" y="200" width="70" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
